# azure-sdk-for-rust

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  oncreate
.github/aw/: actions-lock.json
.github/instructions/: changelog.instructions.md  pwsh.instructions.md
.github/workflows/: issue-triage.lock.yml  issue-triage.md
doc/: checks.md
eng/: emitter-package-lock.json  emitter-package.json
eng/dict/: crates.txt
eng/pipelines/templates/jobs/: analyze.yml  ci.tests.yml  live.tests.yml  pack.yml
eng/pipelines/templates/stages/: archetype-rust-release.yml
eng/pipelines/templates/steps/: use-rust.yml
eng/scripts/: Analyze-Code.ps1  Convert-TestResultsToJUnit.ps1  Format-Code.ps1  Install-RustToolchains.ps1  Language-Settings.ps1  Pack-Crates.ps1  Test-Packages.ps1  Test-Semver.ps1  Update-PackageVersion.ps1  Use-Rust.ps1  Watch-RustDocs.ps1  update-pathversions.rs  update-samples.rs  verify-dependencies.rs
eng/scripts/shared/: Cargo.ps1  Process.ps1  common.ps1
eng/tools/: rust-toolchain.toml
eng/tools/generate_api/: AGENTS.md  Cargo.toml  README.md
eng/tools/generate_api/src/: cli.rs  extract.rs  main.rs  model.rs
samples/: AGENTS.md
samples/cosmos_read_item_native_tls/: Cargo.toml
samples/list_blobs_native_tls/: Cargo.toml
samples/list_blobs_rustls_symcrypt/: Cargo.toml
samples/storage_blob_logging/: Cargo.toml
samples/storage_blob_logging/src/: main.rs
sdk/core/: AGENTS.md  Cargo.toml
sdk/core/azure_core/: CHANGELOG.md  Cargo.toml
sdk/core/azure_core/src/: lib.rs
sdk/core/azure_core_amqp/: CHANGELOG.md  Cargo.toml
sdk/core/azure_core_examples/: Cargo.toml
sdk/core/azure_core_examples/src/: lib.rs
sdk/core/azure_core_opentelemetry/: CHANGELOG.md  Cargo.toml
sdk/core/azure_core_opentelemetry/src/: span.rs  tracer.rs
sdk/core/azure_core_test/: Cargo.toml
sdk/core/azure_core_test/tests/: readme.rs
sdk/core/azure_core_test_macros/: Cargo.toml
sdk/core/typespec/: CHANGELOG.md  Cargo.toml
sdk/core/typespec_client_core/: CHANGELOG.md  Cargo.toml
sdk/core/typespec_macros/: Cargo.toml
sdk/cosmos/: .cspell.json  ci.yml  test-resources.bicep
sdk/cosmos/azure_data_cosmos/: CHANGELOG.md  Cargo.toml
sdk/cosmos/azure_data_cosmos/docs/: ConfigurationOptions.md  in-memory-emulator-spec.md
sdk/cosmos/azure_data_cosmos/src/: lib.rs  runtime.rs
sdk/cosmos/azure_data_cosmos_benchmarks/: Cargo.toml
sdk/cosmos/azure_data_cosmos_driver/: CHANGELOG.md  Cargo.toml
sdk/cosmos/azure_data_cosmos_driver/docs/: GATEWAY_V2_SPEC.md  PARTITION_KEY_RANGE_CACHE_SPEC.md
sdk/cosmos/azure_data_cosmos_driver/tests/: gateway_v2_pipeline_tests.rs
sdk/cosmos/azure_data_cosmos_driver_native/: Cargo.toml
sdk/cosmos/azure_data_cosmos_emulator/docs/: plan.md
sdk/cosmos/azure_data_cosmos_perf/: Cargo.toml
sdk/cosmos/azure_data_cosmos_perf/src/: ua_suffix.rs
sdk/data_cosmos/: Cargo.toml
sdk/data_tables/: Cargo.toml
sdk/eventhubs/azure_messaging_eventhubs/: Cargo.toml
sdk/eventhubs/azure_messaging_eventhubs_checkpointstore_blob/: Cargo.toml
sdk/eventhubs/azure_messaging_eventhubs_checkpointstore_blob/examples/: processor_with_blob_checkpoints.rs
sdk/identity/: .cspell.json  Cargo.toml
sdk/identity/azure_identity/: CHANGELOG.md  Cargo.toml
sdk/identity/azure_identity/src/: azure_arc_credential.rs  lib.rs  managed_identity_credential.rs
sdk/identity/azure_identity/tests/: migration.rs  readme.rs
sdk/iot_hub/: Cargo.toml
sdk/keyvault/: .cspell.json  assets.json
sdk/keyvault/azure_security_keyvault_certificates/: CHANGELOG.md  Cargo.toml  tsp-location.yaml
sdk/keyvault/azure_security_keyvault_certificates/src/: clients.rs
sdk/keyvault/azure_security_keyvault_keys/: CHANGELOG.md  Cargo.toml  tsp-location.yaml
sdk/keyvault/azure_security_keyvault_keys/perf/: create_key.rs  get_key.rs  perf_tests.rs
sdk/keyvault/azure_security_keyvault_secrets/: CHANGELOG.md  Cargo.toml  tsp-location.yaml
sdk/keyvault/azure_security_keyvault_secrets/perf/: get_secret.rs
sdk/messaging_servicebus/: Cargo.toml
sdk/servicebus/azure_messaging_servicebus/: Cargo.toml
sdk/storage/: Cargo.toml
sdk/storage/azure_storage_blob/: CHANGELOG.md  Cargo.toml  README.md  assets.json  perf-tests.yml
sdk/storage/azure_storage_blob_test/: Cargo.toml
sdk/storage/azure_storage_common/: CHANGELOG.md  Cargo.toml
sdk/storage/azure_storage_queue/: CHANGELOG.md  Cargo.toml  README.md
sdk/storage/azure_storage_queue/examples/: README.md
sdk/storage/azure_storage_sas/: CHANGELOG.md  Cargo.toml
sdk/storage_blobs/: Cargo.toml
sdk/storage_datalake/: Cargo.toml
sdk/storage_queues/: Cargo.toml
services/autorust/azure-autorust/: Cargo.toml
services/autorust/codegen/: Cargo.toml
(+145 files in other folders)
