[package]
name = "storage_blob_logging"
version = "0.1.0"
authors = ["Microsoft"]
edition = "2021"
license = "MIT"
repository = "https://github.com/azure/azure-sdk-for-rust"
publish = false

[dependencies]
azure_core = { version = "1.1.0", default-features = false }
azure_core_opentelemetry = "1.0.0"
azure_identity = { version = "1.0.0", default-features = false }
azure_storage_blob = { path = "../../sdk/storage/azure_storage_blob" }
clap = { version = "4.6.0", features = ["derive", "env"] }
opentelemetry-stdout = "0.31.0"
opentelemetry_sdk = "0.31.0"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
