[package]
name = "azure_storage_queue"
version = "1.1.0-beta.2"
description = "Microsoft Azure Queue client library for Rust"
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage = "https://github.com/azure/azure-sdk-for-rust"
documentation = "https://docs.rs/azure_storage_queue"
keywords = ["sdk", "cloud", "queues"]
categories = ["api-bindings"]

[features]
default = ["azure_core/default"]

[dependencies]
async-trait.workspace = true
azure_core = { path = "../../core/azure_core", version = "1.2.0-beta.1", features = ["xml"] }
azure_storage_common = { path = "../azure_storage_common", version = "0.2.0" }
serde = { workspace = true }
time.workspace = true

[lints]
workspace = true

[dev-dependencies]
azure_core_test = { path = "../../core/azure_core_test", features = ["tracing"] }
azure_identity = { path = "../../identity/azure_identity" }
azure_storage_sas.path = "../azure_storage_sas"
futures.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["macros"] }

[package.metadata.docs.rs]
all-features = true
