[package]
name = "azure_storage_sas"
version = "0.2.0"
description = "User delegation Shared Access Signature (SAS) builder for Microsoft Azure Storage services"
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage = "https://github.com/azure/azure-sdk-for-rust"
documentation = "https://docs.rs/azure_storage_sas"
keywords = ["sdk", "cloud"]
categories = ["api-bindings"]

[dependencies]
azure_core = { path = "../../core/azure_core", version = "1.2.0-beta.1" }
azure_storage_common = { path = "../azure_storage_common", version = "0.2.0" }
base64 = { workspace = true }
hmac = { workspace = true }
percent-encoding = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }

[dev-dependencies]
include-file.workspace = true

[lints]
workspace = true
